0.50.0 (2017-03-29)
------------------
- updates to work with recent facebook api changes
- - some apis now hit different endpoints
- - some response formats have now changed
- will now look to environment for default api version (`export FBUTILS_FB_API_VERSION=v2.8`)
- will now look to environment for debug (`export FBUTILS_DEBUG=True`)
- fixed typo/rename `fb_grap_api_version` > `fb_api_version`
- redid how urls are generated for clarity
- updated tests
- made interactive tests public
- now supports appsecret_proof
- pyramid integration namespace change -- now `fbutils.`.  this is to ensure things break and people upgrade correctly


0.40.4 (2017-01-11)
------------------
- packaging fix
- flake8
- version number now in library itself

0.40.3 (2017-01-11)
------------------
- support for non-authenticated queries (such as opengraph lookups)
- api_proxy now supports `get_data` kwarg, which is passed into the `requests` library as `params`.
- FacebookHub now accepts an `unauthenticated_hub` argument
- cleaned up some whitespace
- stashing last-repsonse for later inspection
- supporting inspection of `last_response_ratelimited`

0.40.2 (2015-10-15)
------------------
- aliased `request.registry.settings` to `registry_settings` on setup.

0.40.1 (2015-10-15)
------------------
- added auth_type to FacebookApiUrls.oauth_token__url_dialog
- fixed how auth_type is appended to urls
- BREAKING CHANGE FacebookApiUrls.oauth_code__url_dialog now expects `redirect_uri, scope` NOT `scope, redirect_uri`.  this is the only place in the code where `scope` preceded `redirect_uri`.


0.30.3 (2015-10-08)
------------------
- added `auth_type` to `oauth_code__url_dialog` methods (see https://developers.facebook.com/docs/facebook-login/permissions/v2.5#adding)
- added `access_token` arg to `api_proxy`
- cleaned up some misc formatting

0.30.2 (2015-04-09)
------------------
- fixed wrong kwargs on `oauth_code__url_access_token` and `self.oauth_code__get_access_token`

