@@ -2,7 +2,7 @@
 ------------------
 - updates to work with recent facebook api changes
 - - some apis now hit different endpoints
-- - some response formats have now changed
+- - some response formats have now changed; the minimum 2.3 now uses a json payload instead of urlencoded
 - will now look to environment for default api version (`export FBUTILS_FB_API_VERSION=v2.8`)
 - will now look to environment for debug (`export FBUTILS_DEBUG=True`)
 - fixed typo/rename `fb_grap_api_version` > `fb_api_version`
@@ -11,6 +11,12 @@
 - made interactive tests public
 - now supports appsecret_proof
 - pyramid integration namespace change -- now `fbutils.`.  this is to ensure things break and people upgrade correctly
+- set a custom prefix for pyramid paster integration via `fbutils.prefix`
+
+"""
+https://developers.facebook.com/docs/apps/changelog
+	[Oauth Access Token] Format - The response format of https://www.facebook.com/v2.3/oauth/access_token returned when you exchange a code for an access_token now return valid JSON instead of being URL encoded. The new format of this response is {"access_token": {TOKEN}, "token_type":{TYPE}, "expires_in":{TIME}}. We made this update to be compliant with section 5.1 of RFC 6749.
+"""
 
 
 0.40.4 (2017-01-11)
